reworked abstract method analyzer, keeping track of implementations in prep analyzer